<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText android:layout_width="wrap_content"
              android:id="@+id/txt_username"
              android:layout_height="wrap_content"/>

    <EditText android:layout_width="wrap_content"
              android:id="@+id/txt_password"
              android:layout_height="wrap_content"/>

    <Button android:layout_width="wrap_content"
            android:id="@+id/btn_login"
            android:text="login"
            android:layout_height="wrap_content"/>

</LinearLayout>